resources/tests/invalid_syntax/statement_begin.ct
//`Expected a statement!
//1
fn main()->i64: ;